--- a/fortran/Makefile_main
+++ b/fortran/Makefile_main
@@ -28,7 +28,7 @@ DLL_DIR ?= Releaselib
 
 CAMBLIB       = libcamb.a
 
-SOURCEFILES      = constants config classes MathUtils subroutines DarkAge21cm \
+SOURCEFILES      = exponential_integral constants config classes MathUtils subroutines DarkAge21cm \
         DarkEnergyInterface SourceWindows massive_neutrinos model results bessels \
         $(RECOMBINATION_FILES) $(DARKENERGY_FILES) equations \
         $(REIONIZATION_FILES) $(POWERSPECTRUM_FILES) $(NONLINEAR_FILES) \
